--- a/package.json
+++ b/package.json
@@ -2,15 +2,27 @@
   "name": "vs2moo",
   "displayName": "vs2moo",
   "description": "",
-  "version": "0.0.1",
+  "version": "0.0.9",
+  "publisher": "naHrej",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/naHrej/vs2moo/tree/master"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "naHrej",
+    "email": "dean@santos.ws"
+  },
   "engines": {
     "vscode": "^1.88.0"
   },
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
-  "main": "./out/extension.js",
+  "activationEvents": [
+    "onCommand:vs2moo.GetVerb"
+  ],
+  "main": "out/extension.js",
   "contributes": {
     "commands": [
       {
@@ -22,18 +34,17 @@
       "type": "object",
       "title": "VS2Moo configuration",
       "properties": {
-          "vs2moo.outputPath": {
-              "type": "string",
-              "default": "c:/path/to/output/",
-              "description": "Path to the output directory"
-          },
-          "vs2moo.APIEndpoint": {
-              "type": "string",
-              "default": "http://localhost:3000/",
-              "description": "URL of the MOO API"
-          }
+        "vs2moo.outputPath": {
+          "type": "string",
+          "default": "c:/path/to/output/",
+          "description": "Path to the output directory"
+        },
+        "vs2moo.APIEndpoint": {
+          "type": "string",
+          "default": "http://localhost:3000/",
+          "description": "URL of the MOO API"
+        }
       }
-  
     }
   },
   "scripts": {
@@ -45,14 +56,17 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.88.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
+    "@types/vscode": "^1.88.0",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
-    "eslint": "^8.57.0",
-    "typescript": "^5.3.3",
     "@vscode/test-cli": "^0.0.8",
-    "@vscode/test-electron": "^2.3.9"
+    "@vscode/test-electron": "^2.3.9",
+    "eslint": "^8.57.0",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "chokidar": "^3.6.0"
   }
 }
